--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     body {
       height: 100vh;
-      background: linear-gradient(180deg, #ffdde1, #ec7ad0);
+      background-image: url(floresFondo.png);
       overflow: hidden;
     }
 
@@ -273,7 +273,7 @@
   <!-- PANTALLA 1 -->
   <div class="screen" id="screen1">
     <img id="moodImg" src="minion.webp" alt="" style="width: 300px;">
-    <h1>¿Querés ser mi Valentine? 💘</h1>
+    <h1 style="background-color: pink; border-radius: 10px;">¿Querés ser mi Valentine? 💘</h1>
 
     <div class="buttons">
       <button id="yesBtn">Sí 💕</button>
